# pyfg

./: README.md  pyproject.toml
examples/: example1.py  example2.py  example3.py  example4.py  example5.py
pyFG/: forticonfig.py  fortios.py
